# evalguard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EvalGuard_REPORT.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: CALIBRATION_AND_REAL_RESULTS.md  FINDINGS.md  run_3bench_multiseed.py  run_demo.py  run_distinctiveness_gsm8k.py  run_distinctiveness_multiseed.py  run_distinctiveness_sciq.py  run_distinctiveness_study.py  run_mode_comparison.py  run_real_demo.py  run_robustness.py  run_scaling_study.py
demo/real_data/: README.md  _build_cache.py  _raw_agnews_000.json  _raw_agnews_100.json  _raw_agnews_200.json  _raw_agnews_300.json  _raw_agnews_400.json  _raw_agnews_500.json  _raw_agnews_600.json  _raw_obqa_000.json  _raw_obqa_100.json  _raw_obqa_200.json  ag_news.jsonl  gsm8k.jsonl  openbookqa.jsonl  sciq.jsonl
evalguard/: __init__.py  aggregate.py  benchmark.py  calibrate.py  cli.py  config.py  corpus.py  decision.py  estimands.py  inject.py  report.py  synth.py
evalguard/calibration/: aggregate_pr.csv  answer_pr.csv  calibration.json  embedding_pr.csv  ngram_pr.csv  paraphrase_pr.csv
evalguard/matchers/: __init__.py  answer.py  embedding.py  ngram.py  paraphrase.py
examples/: benchmark.jsonl  corpus.jsonl  corpus_clean.jsonl  scores.json
tests/: test_calibrate.py  test_decision.py  test_distinctiveness.py  test_end_to_end.py  test_estimands.py  test_inject.py  test_matchers.py  test_real_data.py  test_scaling.py
