[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "evalguard"
version = "0.1.0"
description = "Open-data contamination auditor for LLM evaluations: estimate how much of a benchmark score is inflated by training-data leakage, with an evidence trail."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "EvalGuard contributors" }]
keywords = [
    "llm", "evaluation", "benchmark", "data-contamination", "data-leakage",
    "reproducibility", "machine-learning", "auditing", "test-set-contamination",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.0",
    "scipy>=1.7",
]

[project.urls]
Homepage = "https://github.com/shengdynasty/evalguard"
Repository = "https://github.com/shengdynasty/evalguard"
Changelog = "https://github.com/shengdynasty/evalguard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7.0"]
# calibration curve PNGs (evalguard.calibrate) + study figures; CSV/JSON work without it.
plot = ["matplotlib>=3.4"]
# real-embedding backend (embedding.try_sentence_transformer); optional & heavy.
embeddings = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0", "matplotlib>=3.4"]

[project.scripts]
evalguard = "evalguard.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["evalguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
